syntax = "proto3";

package video;

option go_package = "tiktok/video";

service tiktokVideoService {
  rpc putVideo(putVideoRequest) returns (putVideoResponse){};
  rpc deleteVideo(deleteVideoRequest) returns (deleteVideoResponse){};
  rpc getOneVideoInfo(getOneVideoInfoRequest) returns (getOneVideoInfoResponse){};
  rpc downloadOneVideo(downloadOneVideoRequest) returns (downloadOneVideoResponse){};
  rpc downloadMultiVideo(downloadMultiVideoRequest) returns (downloadMultiVideoResponse){};
  rpc downloadMaxVideo(downloadMaxVideoRequest) returns (downloadMaxVideoResponse){};
}

message putVideoRequest{
  string play_url = 1;
  string cover_url = 2;
  string title = 3;
  int64 owner_id = 4;
}

message putVideoResponse{
  bool state = 1;
  string title = 2;
  int64 owner_id = 3;
  string errState = 4;
}

message deleteVideoRequest {
  string title = 1;
  int64 deletor_id = 2;
}

message deleteVideoResponse {
  bool state = 1;
  string delete_video_name = 2;
  int64 deletor_id = 3;
  int64 video_owner_id = 4;
  string errState = 5;
}

message getOneVideoInfoRequest {
  string video_name = 1;
}

message getOneVideoInfoResponse {
  bool state = 1;
  int64 video_id = 2; // 视频ID
  string play_url = 3; // 播放地址
  string cover_url = 4; // 封面地址
  string video_title = 5; // 标题
  int64 video_size = 6;
  string video_mime_type = 7;
  int64 owner_id = 8; // 用户名称
  string errState = 9;
}
message downloadOneVideoRequest {
  string video_name = 1;
}

message downloadOneVideoResponse {
  bool state = 1;
  string video_title = 2;
  string video_url = 3;
  int64 owner_id = 4;
}

message downloadMultiVideoRequest {
  int64 video_number = 1;
  int64 downloador_id = 2;
}

message downloadMultiVideoResponse {
  bool state = 1;
  int64 video_number = 2;
  repeated string video_urls = 3;
  string errState = 4;
}

message downloadMaxVideoRequest {
  int64 downloador_id = 1;
}

message downloadMaxVideoResponse {
  bool state = 1;
  string videoINfo = 2;
  string errState = 3;
}